--- a/styles/_basic.scss
+++ b/styles/_basic.scss
@@ -5,3 +5,35 @@
 body {
 	font-family: Roboto, sans-serif;
 }
+
+a {
+	text-decoration: none;
+	color: unset;
+}
+
+.container {
+	max-width: 1440px;
+	margin: 0 auto;
+	padding: 0 10px;
+}
+
+ul {
+	list-style: none;
+}
+
+li {
+	list-style: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+p,
+button {
+	padding: 0;
+	margin: 0;
+}
