--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -6,7 +6,7 @@
 .header {
 	width: 100%;
 	height: 50px;
-	background-color: v.$color_blue;
+	background-color: color.adjust(v.$color_white, $alpha: -0.85);
 	border: {
 		bottom: {
 			width: 1px;
@@ -44,7 +44,7 @@
 
 			.list {
 				@include m.d-flex(start, center, nowrap, row, min(100px, 5vw), 0);
-				padding: 0 0 0 min(100px, 5vw);
+				padding: 0 min(100px, 5vw);
 
 				&__item {
 					.list__item-link {
@@ -57,7 +57,7 @@
 
 				@media (max-width: v.$media_lg) {
 					.list {
-						@include m.d-flex(center, center, nowrap, row, min(100px, 5vw), 0);
+						@include m.d-flex(center, center, nowrap, row, min(5vw, 100px));
 						padding: 0;
 					}
 				}
