--- a/styles/_basic.scss
+++ b/styles/_basic.scss
@@ -25,6 +25,16 @@ li {
 	list-style: none;
 }
 
+svg {
+	width: 100%;
+	height: 100%;
+}
+
+use {
+	width: 100%;
+	height: 100%;
+}
+
 h1,
 h2,
 h3,
@@ -35,5 +45,9 @@ ul,
 p,
 button {
 	padding: 0;
+	margin: 0;
+}
+
+figure {
 	margin: 0;
 }
