--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -2,6 +2,8 @@
 $color_blue: #678ff2;
 $color_white: #fff;
 $color_black: #000;
+$color_grey: #b4b4b4;
+$background_figure: #7594e0;
 
 $media_xxl: 1400px;
 $media_xl: 1200px;
