--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,6 +4,7 @@ $color_white: #fff;
 $color_black: #000;
 $color_grey: #b4b4b4;
 $background_figure: #7594e0;
+$border_button: #00000080;
 
 $media_xxl: 1400px;
 $media_xl: 1200px;
